chore: remove static parts from home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <!-- Toggle Mobile Menu -->
       <div class="col-xs-8 toggle-menu">
         <div class="toggle-menu__actions">
-          <a class="nav-link--shortcut" href="https://t.me/diode_chain" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+          <a class="nav-link--shortcut" href="{{ site.links.telegram }}n" target="_blank"><i class="fab fa-telegram-plane"></i></a>
           <a class="button nav-button" href="resources/download/">GET DIODE</a>
         </div>
         <!-- Burger -->
