--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         <div class="footer-logo">
           <img src="images/logo-focus.svg" width="140" alt="Diode - Logo" />
         </div>
-        <a class="button scrollup">
+        <a id="scrollupButton" class="button scrollup">
           <i class="pe-7s-angle-up"></i>
         </a>
     </div>
@@ -53,10 +53,10 @@
       </div>
       <div class="col-xs-12 col-lg-5">
         <div class="footer-socials">
-          <a href="{{ site.youtube }}" target="_blank"><i class="fab fa-youtube"></i></a>
-          <a href="{{ site.telegram }}" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-          <a href="{{ site.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="{{ site.telegram }}" class="mr-5" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="{{ site.links.youtube }}" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="{{ site.links.telegram }}" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+          <a href="{{ site.links.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="{{ site.links.telegram }}" class="mr-5" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     <div class="row footer-bottom-2">
       <div class="col-xs-12">
         <div class="footer-text">
-          All Right Reserved! DIODE © 2020 Copyright
+          All Right Reserved! <span>DIODE © 2020 Copyright</span>
         </div>
       </div>
     </div>
