--- a/_includes/sections/features.html
+++ b/_includes/sections/features.html
@@ -39,12 +39,12 @@
 
     <div class="feature-more row">
       <div class="col-sm-6">
-        <a class="contact-button button button--outline">
+        <a class="contact-button button button--outline" alt="Contact Us" href="{{ site.links.contact_us }}">
           CONTACT US
         </a>
       </div>
       <div class="col-sm-6">
-        <a class="link link--arrow">
+        <a class="link link--arrow" alt="Learn More" href="{{ site.links.learn_more }}">
           LEARN MORE
         </a>
       </div>
@@ -52,10 +52,10 @@
 
 
     <div class="feature-more--xs">
-      <a class="contact-button button button--outline">
+      <a class="contact-button button button--outline" alt="Contact Us" href="{{ site.links.contact_us }}">
         CONTACT US
       </a>
-      <a class="button">
+      <a class="button" alt="Get Started" href="{{ site.links.learn_more }}">
         GET STARTED
       </a>
     </div>
