--- a/_includes/sections/offer.html
+++ b/_includes/sections/offer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <a class="offer-link" href="{{ include.link }}" target="_blank" >
+        <a class="offer-link" href="{{ site.links.telegram }}" target="_blank" >
           <h2>
             {{ include.offer-text }}
           </h2>
