fix: download links by os

--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -16,26 +16,28 @@
         <p class="hero-description--xs">{{ page.hero-xs-description }}</p>
       
         <div class="action-container">
-          <a class="button action-button" alt="{{ page.hero-links[0].title }}" href="{{ page.hero-links[0].url }}">
-            <div class="text-sm">
-              {{ page.hero-links[0].label }}
-            </div>
-            <div class="text-xs">
-              {{ page.hero-links[0].xs-label }}
-            </div>
+          {% for download in site.d-drive.downloads %}
+          <a class="button action-button hide {{ download.id }}" alt="dDrive" href="{{ site.d-drive.download-base }}{{ download.link }}">
+            <span class="text-sm">
+              Download dDrive for {{ download.name }}
+            </span>
+            <span class="text-xs">
+              GET A DEMO
+            </span>
           </a>
-          <a class="link text-sm link--white link--arrow" href="{{ page.hero-links[1].url }}">
-            {{ page.hero-links[1].label }}
+          {% endfor %}
+          <a class="link text-sm link--white link--arrow" href="{{ site.links.learn_more }}">
+            LEARN MORE
           </a>
-          <a class="link text-xs link--white link--arrow" href="{{ page.hero-links[1].url }}">
-              {{ page.hero-links[1].xs-label }}
+          <a class="link text-xs link--white link--arrow" href="{{ site.links.learn_more }}">
+            DIODE IS THE FUTURE OF WEB3
           </a>
           <div class="action-descriptoin">
             Available for 
-            <a href="{{ site.download-base }}{{ site.downloads[3].link }}" alt="{{ site.downloads[3].id }}">Windows</a>, 
-            <a href="{{ site.download-base }}{{ site.downloads[1].link }}" alt="{{ site.downloads[1].id }}">MacOS</a>, 
-            and <a href="{{ site.download-base }}{{ site.downloads[4].link }}" alt="{{ site.downloads[4].id }}">Linux</a> 
-            (<a href="{{ site.download-base }}{{ site.downloads[0].link }}" alt="{{ site.downloads[0].id }}">Raspberry Pi</a>)
+            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[2].link }}">{{ site.d-drive.downloads[2].name }}</a>, 
+            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[1].link }}">{{ site.d-drive.downloads[1].name }}</a>, and 
+            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[3].link }}">{{ site.d-drive.downloads[3].name }}</a> 
+            (<a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[0].link }}">{{ site.d-drive.downloads[0].name }}</a>)
           </div>
         </div>
 
