--- a/_scss/layout/_solutions-download.scss
+++ b/_scss/layout/_solutions-download.scss
@@ -43,6 +43,8 @@ section.solutions-download-section {
         .button {
           margin: 0 auto;
           width: 250px;
+          justify-content: center;
+          margin-left: 0;
         }
 
         &--xs {
