--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -1,55 +1,78 @@
 <!-- Download Section -->
 <section class="site-section download-section" id="download">
-    {% for download in page.downloads %}
+    <!-- Download dDrive -->
     <div class="download">
         <div class="container">
             <div class="row">
                 <div class="download__left col-sm-4">
                     <div class="download-title">
-                        <img class="icon" src="{{ download.icon }}" />
-                        <h2 class="title">{{ download.title }} </h2>
+                        <img class="icon" src="{{ site.d-drive.icon }}" />
+                        <h2 class="title">{{ site.d-drive.title }} </h2>
                     </div>
-                    {% if forloop.index == 1 %}
                     <div class="download-action">
-                        <a class="button">Download dDrive for MacOS</a>
+                        {% for download in site.d-drive.downloads %}
+                        <a class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download dDrive for {{ download.name }}</a>
+                        {% endfor %}
                         <div class="action-description">
-                            Available for <a href="">Windows</a>, <a href="">MacOS</a>, and <a href="">Linux</a> (<a href="">Raspberry Pi</a>)
+                            Available for
+                            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[2].link }}">{{ site.d-drive.downloads[2].name }}</a>, 
+                            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[1].link }}">{{ site.d-drive.downloads[1].name }}</a>, and 
+                            <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[3].link }}">{{ site.d-drive.downloads[3].name }}</a> 
+                            (<a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[0].link }}">{{ site.d-drive.downloads[0].name }}</a>)
                         </div>
                     </div>
-                    {% endif %}
                 </div>
                 <div class="col-sm-8">
                     <div class="download-content">
                         <div class="download-description">
-                            {{ download.description }}
+                            {{ site.d-drive.description }}
                         </div>
-                        <a class="link link--arrow">LEARN MORE</a>
+                        <a class="link link--arrow" href="{{ site.links.learn_more }}">LEARN MORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Download Diode CLI -->
+    <div class="download">
+        <div class="container">
+            <div class="row">
+                <div class="download__left col-sm-4">
+                    <div class="download-title">
+                        <img class="icon" src="{{ site.diode-cli.icon }}" />
+                        <h2 class="title">{{ site.diode-cli.title }} </h2>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <div class="download-content">
+                        <div class="download-description">
+                            {{ site.diode-cli.description }}
+                        </div>
+                        <a class="link link--arrow" href="{{ site.links.learn_more }}">LEARN MORE</a>
                     </div>
                 </div>
             </div>
 
-            {% if download.command %}
             <div class="row download-command">
                 <div class="col-xs-12">
                     <p>
                         Copy & paste the line below into a terminal:
-                    <p>
+                    </p>
                     <div class="download-action">
-                        <div class="button">
-                            {{ download.command }}
-                        </div>
+                        <code>
+                            <span class="noselect">$ </span>
+                            {{ site.diode-cli.download-command }}
+                        </code>
                         <div class="action-description">
                             Supported on macOS, Linux, Raspberry Pi (or Windows if you have curl)
                         </div>
                     </div>
                 </div>
             </div>
-            {% endif %}
-            {% if download.choices %}
             <hr class="orange" />
             <p>Or manually install in location of your choice</p>
             <div class="row download-choices">
-                {% for choice in download.choices %}
+                {% for choice in page.choices %}
                     <div class="col-md-4">
                         <div class="choice">
                             <div class="choice-title">
@@ -63,23 +86,24 @@
                             </div>
                             {% if choice.downloads %}
 
-                            {% for item in site.downloads %}
-                            <a id="{{ item.id }}" class="choice-action" href="{{ site.download-base }}{{ item.link }}">
+                            {% for item in site.diode-cli.downloads %}
+                            <a class="choice-action hide {{ item.id }}" href="{{ site.download-base }}{{ item.link }}">
                                 {{ item.title }}
                             </a>
                             {% endfor %}
 
                             <div class="choice-downloads">
-                                {% for item in site.downloads %}
+                                {% for item in site.diode-cli.downloads %}
                                     <a class="download-item" href="{{ site.download-base }}{{ item.link }}">
                                         {{ item.title }}
                                     </a>
                                 {% endfor %}
                             </div>
                             {% else %}
-                            <div class="choice-command ">
+                            <code>
+                                <span class="noselect">$&nbsp;</span>
                                 {{ choice.command }}
-                            </div>
+                            </code>
                             <div class="choice-hint">
                                 {{ choice.hint }}
                             </div>
@@ -88,8 +112,6 @@
                     </div>
                 {% endfor %}
             </div>
-            {% endif %}
         </div>
     </div>
-    {% endfor %}
 </section>
