--- a/_scss/layout/_solutions.scss
+++ b/_scss/layout/_solutions.scss
@@ -52,7 +52,7 @@ section.solutions-section {
   .solution {
     background-color: $web-gray;
     font-weight: 400;
-    height: 100%;
+    min-height: 320px;
     padding: 25px;
     @media (max-width: 993px) {
       margin-bottom: 40px;
