--- a/css/style.css
+++ b/css/style.css
@@ -5144,7 +5144,7 @@ section.solutions-section .row .button {
 section.solutions-section .solution {
   background-color: #f1f3f6;
   font-weight: 400;
-  height: 100%;
+  min-height: 320px;
   padding: 25px;
 }
 
@@ -5257,6 +5257,11 @@ section.solutions-download-section .downloads .container .download-description {
 section.solutions-download-section .downloads .container .download .button {
   margin: 0 auto;
   width: 250px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 0;
 }
 
 section.solutions-download-section .downloads .container .download--xs:first-child {
@@ -6882,6 +6887,10 @@ section.download-section .download-description {
   margin-bottom: 30px;
 }
 
+section.download-section .download .link {
+  margin-right: 20px;
+}
+
 section.download-section .download__left {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -6897,11 +6906,28 @@ section.download-section .download__left {
 
 section.download-section .download-action {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 section.download-section .download-action .button {
   padding-left: 25px;
   padding-right: 25px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+section.download-section .download-action code {
+  background-color: #f15d2f;
+  padding: 15px 20px;
+  text-align: center;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  width: 100%;
+  font-size: 1.3rem;
 }
 
 section.download-section .download-action .action-description {
@@ -6912,7 +6938,7 @@ section.download-section .download-action .action-description {
 
 section.download-section .download-command {
   margin-top: 50px;
-  margin-bottom: 60px;
+  margin-bottom: 70px;
 }
 
 section.download-section .download-command .command-label {
@@ -6952,7 +6978,16 @@ section.download-section .download .download-choices .choice {
   -webkit-border-radius: 4px;
           border-radius: 4px;
   padding: 20px;
-  min-height: 300px;
+  min-height: 325px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 section.download-section .download .download-choices .choice-title {
@@ -6974,8 +7009,8 @@ section.download-section .download .download-choices .choice-title .circle {
   background-color: #f15d2f;
   -webkit-border-radius: 50%;
           border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -6992,6 +7027,37 @@ section.download-section .download .download-choices .choice-title .circle {
   font-size: 1.2rem;
 }
 
+section.download-section .download .download-choices .choice code {
+  background-color: #1f2739;
+  color: #fff;
+  width: 100%;
+  overflow-x: auto;
+  height: 35px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  white-space: nowrap;
+  overflow-x: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10px;
+  font-size: 12px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section.download-section .download .download-choices .choice-hint {
+  line-height: 1.5;
+  text-align: center;
+}
+
 section.download-section .download .download-choices .choice-description {
   text-align: center;
   line-height: 1.8;
@@ -6999,7 +7065,10 @@ section.download-section .download .download-choices .choice-description {
 }
 
 section.download-section .download .download-choices .choice-action {
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   background-color: #f15d2f;
   color: #fff;
   padding: 7px;
