chore: remove unneed things

--- a/_includes/sections/solutions-download.html
+++ b/_includes/sections/solutions-download.html
@@ -65,7 +65,7 @@
   <div class="contact-us">
     <div class="contact-us__card">
       <div class="description">
-        {{ layout.contact_us.text }}
+        {{ layout.contact_us }}
       </div>
       <a class="button button--outline hidden-xs" href="{{ site.links.contact_us }}">Contact Us</a>
       <a class="button hidden-sm hidden-md hidden-lg" href="{{ site.links.contact_us }}">Contact Us</a>
