--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -3,7 +3,7 @@
   <div class="container">
 
     <!-- Products Pricing Page Title -->
-    <h2 class="site-section__title">{{ page.title }}</h2>
+    <h2 class="site-section__title">{{ page.header-title }}</h2>
 
 
     <!-- Products Pricing Cards (Desktop) -->
@@ -49,11 +49,11 @@
     
 
     <!-- Products Pricing Page Description -->
-    <h3 class="products-section__description">{{ page.description }}</h3>
+    <h3 class="products-section__description">{{ page.header-description }}</h3>
 
     <!-- Contact us -->
     <div class="products-pricing__contact-us">
-      <a id="contact-us" class="button button--outline" href="#">
+      <a id="contact-us" class="button button--outline" href="{{ site.links.contact_us }}">
         CONTACT US
       </a>
     </div>
