--- a/_includes/sections/how-it-works.html
+++ b/_includes/sections/how-it-works.html
@@ -9,7 +9,7 @@
       <iframe class="tutorial" src="{{page.video}}" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="actions">
+    <div class="actions hidden-xs">
       {% for download in site.d-drive.downloads %}
       <a 
         class="button {{ download.id }} hide"
@@ -20,6 +20,10 @@
       {% endfor %}
       <a href="{{ site.diode-network.link }}" class="button button--outline">START USING THE NETWORK</a>
       <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
+    </div>
+    <div class="actions hidden-sm hidden-md hidden-lg">
+      <a class="button" href="{{ site.links.download }}">GET DIODE</a>
+      <a class="button button--outline" href="{{ site.links.learn_more }}">LEARN MORE</a>
     </div>
   </div>
 </section>
@@ -50,7 +54,7 @@
       <div class="row">
         {% for item in page.section3.items %}
           {% if forloop.index < 3 %}
-            <div class="item-container col-md-6">
+            <div class="item-container col-sm-6">
               <div class="item">
                 <div class="item-title-wrapper">
                   <img src="/images/rect_{{ forloop.index + 1 }}.svg">
@@ -68,7 +72,7 @@
   </div>
   <div class="section-bottom-container">
     <div class="container">
-
+      <div class="container__label">Additional key concepts include:</div>
       {% for item in page.section3.items %}
         <div class="item-container">
           {% if forloop.index > 2 %}
@@ -88,7 +92,7 @@
       {% endfor %}
 
     </div>
-    <div class="action">
+    <div class="action hidden-xs">
       <a href="{{ site.links.try_it_out }}" class="button button--outline">TRY IT OUT</a>
     </div>
 
@@ -120,7 +124,7 @@
         </div>
       </div>
     {% endfor %}
-    <div class="action">
+    <div class="action hidden-xs">
       <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
     </div>
   </div>
