--- a/_scss/layout/_how-it-works.scss
+++ b/_scss/layout/_how-it-works.scss
@@ -6,23 +6,30 @@
  *
  **/
 
- section.how-it-works-section {
+section.how-it-works-section {
   background-color: $white !important;
   padding: 10px 0 60px;
   .container {
-
-
     iframe {
       width: 100%;
       max-width: 800px;
       height: 400px;
+
+      @media (max-width: 768px) {
+        height: 300px;
+      }
     }
 
     .actions {
       margin: 60px auto 0 auto;
       text-align: center;
-      &> a {
+      & > a {
         margin: 15px;
+        @media (max-width: 768px) {
+          margin: 2px;
+          width: 150px;
+          padding: 10px 0;
+        }
       }
     }
   }
@@ -39,7 +46,7 @@ section.how-it-works-section--2 {
       margin-bottom: 40px;
 
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         width: 50px;
         height: 1px;
@@ -47,12 +54,24 @@ section.how-it-works-section--2 {
         left: calc(50% - 25px);
         bottom: -15px;
       }
+
+      @media (max-width: 768px) {
+        color: $web-blue;
+        font-size: 20px;
+        text-transform: inherit;
+        &::after {
+          bottom: -20px;
+        }
+      }
     }
 
     .description {
       font-size: $text-font-size-1;
       max-width: 800px;
       margin: 0 auto;
+      @media (max-width: 768px) {
+        font-size: 18px;
+      }
     }
   }
 }
@@ -63,11 +82,18 @@ section.how-it-works-section--3 {
     padding: 60px 0 0 0;
     background-color: $white !important;
     width: 100%;
+    @media (max-width: 768px) {
+      padding: 0;
+    }
     .container {
       border-top: 1px solid $orange;
       border-left: 1px solid $orange;
       border-right: 1px solid $orange;
       padding: 50px 0 20px;
+      @media (max-width: 768px) {
+        border: none;
+        padding-bottom: 0;
+      }
       .title {
         position: relative;
         text-transform: uppercase;
@@ -75,9 +101,8 @@ section.how-it-works-section--3 {
         font-size: $title-font-size-1;
         margin-bottom: 40px;
         color: $web-blue;
-  
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           width: 50px;
           height: 1px;
@@ -85,21 +110,39 @@ section.how-it-works-section--3 {
           left: calc(50% - 25px);
           bottom: -15px;
         }
+
+        @media (max-width: 768px) {
+          font-size: 20px;
+          text-transform: inherit;
+          color: $web-blue;
+          &::after {
+            bottom: -20px;
+          }
+        }
       }
-  
+
       .description {
         font-size: $text-font-size-1;
         max-width: 800px;
         margin: 0 auto 50px auto;
         color: $web-blue;
+        @media (max-width: 768px) {
+          color: $gray;
+          padding: 0 5%;
+        }
       }
 
       .row {
         align-items: flex-start;
-        &>.item-container {
+        & > .item-container {
           position: relative;
           .item {
-            padding: 0 30px; 
+            padding: 0 30px;
+
+            @media (max-width: 768px) {
+              background-color: $bg;
+              padding: 50px 5%;
+            }
 
             &-title-wrapper {
               display: flex;
@@ -107,6 +150,17 @@ section.how-it-works-section--3 {
               margin-bottom: 30px;
               img {
                 margin-right: 15px;
+              }
+              @media (max-width: 768px) {
+                h4 {
+                  text-align: center;
+                  width: 100%;
+                  color: $web-blue;
+                  font-size: 18px;
+                }
+                img {
+                  display: none;
+                }
               }
             }
             &-title {
@@ -118,17 +172,36 @@ section.how-it-works-section--3 {
             &-description {
               font-size: $text-font-size-1;
               color: $web-blue;
+              @media (max-width: 768px) {
+                font-size: 18px;
+              }
             }
           }
 
           &:first-child::after {
-            content: '';
+            content: "";
             position: absolute;
             width: 1px;
             height: 300px;
             background-color: $orange;
             top: 60px;
             right: 0;
+          }
+        }
+        & > .item-container:first-child {
+          position: relative;
+          @media (max-width: 768px) {
+            position: relative;
+            &::after {
+              content: "";
+              position: absolute;
+              width: 36px;
+              height: 1px;
+              background-color: $orange;
+              left: calc(50% - 18px);
+              bottom: 0;
+              top: inherit;
+            }
           }
         }
       }
@@ -139,20 +212,48 @@ section.how-it-works-section--3 {
     background-color: $web-blue !important;
     color: $white;
     width: 100%;
+    @media (max-width: 768px) {
+      background-color: $white !important;
+      color: $web-blue;
+    }
     .container {
       border-left: 1px solid $orange;
       border-right: 1px solid $orange;
       border-bottom: 1px solid $orange;
       padding: 70px 0 0 0;
 
+      @media (max-width: 768px) {
+        padding-top: 0px;
+        border: none;
+      }
+
+      &__label {
+        display: none;
+        @media (max-width: 768px) {
+          display: block;
+          padding: 50px 5%;
+          font-size: 18px;
+        }
+      }
+
       .item-container {
         max-width: 800px;
         margin-left: auto;
         margin-right: auto;
 
+        &:last-child {
+          background-color: $web-blue;
+          color: $white;
+          padding: 50px 0 10px;
+        }
+
         .item {
-          padding: 0 30px; 
+          padding: 0 30px;
           margin-bottom: 60px;
+
+          @media (max-width: 768px) {
+            padding: 0 5%;
+          }
 
           &-title-wrapper {
             display: flex;
@@ -161,35 +262,58 @@ section.how-it-works-section--3 {
             img {
               margin-right: 15px;
             }
+            @media (max-width: 768px) {
+              img {
+                display: none;
+              }
+            }
           }
           &-title {
             font-size: $text-font-size-2;
             text-transform: uppercase;
+            @media (max-width: 768px) {
+              position: relative;
+              width: 100%;
+              text-align: center;
+              margin-bottom: 10px;
+              font-size: 18px;
+              line-height: 1.5;
+              &::after {
+                content: "";
+                position: absolute;
+                width: 36px;
+                height: 1px;
+                background-color: $orange;
+                bottom: -20px;
+                left: calc(50% - 18px);
+              }
+            }
           }
 
-          &-description, &-description>p  {
+          &-description,
+          &-description > p {
             font-size: $text-font-size-1;
+            @media (max-width: 768px) {
+              font-size: 18px;
+            }
           }
         }
-
       }
-
     }
 
     .action {
       text-align: center;
       padding: 70px 0;
     }
-
-
   }
-
-
 }
 
 section.how-it-works-section--4 {
   background-color: $white !important;
   padding: 80px 0;
+  @media (max-width: 768px) {
+    padding-bottom: 10px;
+  }
   .container {
     .title {
       position: relative;
@@ -200,13 +324,25 @@ section.how-it-works-section--4 {
       color: $web-blue;
 
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         width: 50px;
         height: 1px;
         background-color: $orange;
         left: calc(50% - 25px);
         bottom: -15px;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 20px;
+        text-transform: inherit;
+        margin-bottom: 40px;
+        &::after {
+          width: 36px;
+          left: calc(50% - 18px);
+          bottom: -20px;
+          top: inherit;
+        }
       }
     }
 
@@ -215,10 +351,14 @@ section.how-it-works-section--4 {
       max-width: 800px;
       margin: 0 auto 50px auto;
       color: $web-blue;
+      @media (max-width: 768px) {
+        font-size: 18px;
+      }
     }
 
     .row {
       margin-bottom: 60px;
+      position: relative;
 
       .number {
         width: 25%;
@@ -226,6 +366,14 @@ section.how-it-works-section--4 {
         text-align: center;
         font-size: 9rem;
         order: 1;
+        @media (max-width: 768px) {
+          position: absolute;
+          top: 20px;
+          left: 0;
+          color: $web-blue;
+          opacity: 0.2;
+          font-size: 96px;
+        }
       }
 
       .item {
@@ -234,17 +382,34 @@ section.how-it-works-section--4 {
         padding: 40px;
         order: 2;
 
+        @media (max-width: 768px) {
+          width: 93%;
+          padding: 40px 5%;
+        }
+
         &-title {
           font-size: $text-font-size-2;
           margin-bottom: 40px;
           text-transform: uppercase;
           text-align: center;
           color: $web-blue;
-        } 
+          line-height: 1.5;
+          @media (max-width: 768px) {
+            color: $dark-blue;
+            font-size: 18px;
+            max-width: 200px;
+            margin-left: auto;
+            margin-right: auto;
+          }
+        }
         &-description {
           font-size: $text-font-size-1;
           line-height: 1.5;
           color: $web-blue;
+          @media (max-width: 768px) {
+            color: $dark-blue;
+            font-size: 18px;
+          }
         }
       }
     }
@@ -260,6 +425,5 @@ section.how-it-works-section--4 {
       text-align: center;
       width: 100%;
     }
-
   }
 }
